test/stage2/test_11810517_6.out
Error type 5 at Line 20: unmatching types appear at both sides of the assignment operator